--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,59 +6,76 @@ services:
     env_file:
       - mysql-server.env
     image: mysql/mysql-server:8.0.17
-    # ports:
-    #   - "3301:3306"
     command: ["mysqld","--server_id=1","--binlog_checksum=NONE","--gtid_mode=ON","--enforce_gtid_consistency=ON","--log_bin","--log_slave_updates=ON","--master_info_repository=TABLE","--relay_log_info_repository=TABLE","--transaction_write_set_extraction=XXHASH64","--user=mysql","--skip-host-cache","--skip-name-resolve", "--default_authentication_plugin=mysql_native_password"]
     networks:
       - mysql-cluster
+    hostname: mysql-server-1
 
   mysql-server-2:
     env_file:
       - mysql-server.env
     image: mysql/mysql-server:8.0.17
     command: ["mysqld","--server_id=2","--binlog_checksum=NONE","--gtid_mode=ON","--enforce_gtid_consistency=ON","--log_bin","--log_slave_updates=ON","--master_info_repository=TABLE","--relay_log_info_repository=TABLE","--transaction_write_set_extraction=XXHASH64","--user=mysql","--skip-host-cache","--skip-name-resolve", "--default_authentication_plugin=mysql_native_password"]
-    # ports:
-    #   - "3302:3306"
     networks:
       - mysql-cluster
+    hostname: mysql-server-2
 
   mysql-server-3:
     env_file:
       - mysql-server.env
     image: mysql/mysql-server:8.0.17
     command: ["mysqld","--server_id=3","--binlog_checksum=NONE","--gtid_mode=ON","--enforce_gtid_consistency=ON","--log_bin","--log_slave_updates=ON","--master_info_repository=TABLE","--relay_log_info_repository=TABLE","--transaction_write_set_extraction=XXHASH64","--user=mysql","--skip-host-cache","--skip-name-resolve", "--default_authentication_plugin=mysql_native_password"]
-    # ports:
-    #   - "3303:3306"
     networks:
       - mysql-cluster
+    hostname: mysql-server-3
 
-  mysql-shell:
+  # This container waits for the mysql instances to start and then configures the cluster
+  csc-mysql-shell:
     env_file:
       - mysql-shell.env
-    image: neumayer/mysql-shell-batch
-    volumes:
-        - ./scripts/:/scripts/
+    build:
+      context: ./mysql-shell
+    image: csc-mysql-shell:latest
     depends_on:
       - mysql-server-1
       - mysql-server-2
       - mysql-server-3
     networks:
       - mysql-cluster
+    # DO NOT RESTART THIS CONTAINER!
+    # It is meant to naturally die after it finishes setting up the cluster
+    deploy:
+      restart_policy:
+        condition: none
 
+  # This container acts as the central point for clients to connect to. It distributes 
+  # the requests to cluster members
   mysql-router:
     env_file:
       - mysql-router.env
-    image: mysql/mysql-router:8.0
+    image: mysql/mysql-router:8.0.16
     # ports:
     #   - "6446:6446"
     depends_on:
       - mysql-server-1
       - mysql-server-2
       - mysql-server-3
-      - mysql-shell
+      - csc-mysql-shell
     restart: on-failure
     networks:
       - mysql-cluster
+
+  # This is a GUI administration tool for the cluster
+  adminer:
+    image: adminer
+    restart: always
+    depends_on:
+      - mysql-router
+    ports:
+      - 8080:8080
+    networks:
+      - mysql-cluster
+
   # dbwebapp:
   #   env_file:
   #     - dbwebapp.env
