--- a/mysql-router.env
+++ b/mysql-router.env
@@ -1,5 +1,9 @@
-MYSQL_USER=root
+# MYSQL_USER=root
 MYSQL_HOST=mysql-server-1
 MYSQL_PORT=3306
-MYSQL_PASSWORD=mysql
+# MYSQL_PASSWORD=mysql
 MYSQL_INNODB_NUM_MEMBERS=3
+
+# Use secrets for the following environment variables
+MYSQL_USER_FILE=/run/secrets/db_user
+MYSQL_PASSWORD_FILE: /run/secrets/db_user_password
