--- a/mysql-server.env
+++ b/mysql-server.env
@@ -1,2 +1,8 @@
-MYSQL_ROOT_PASSWORD=mysql
+# Original vars
+#MYSQL_ROOT_PASSWORD=mysql
 MYSQL_ROOT_HOST=%
+
+# Use secrets for the following environment variables
+MYSQL_USER_FILE=/run/secrets/db_user
+MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
+MYSQL_PASSWORD_FILE: /run/secrets/db_user_password
