--- a/mysql-router.env
+++ b/mysql-router.env
@@ -6,4 +6,4 @@ MYSQL_INNODB_NUM_MEMBERS=3
 
 # Use secrets for the following environment variables
 MYSQL_USER_FILE=/run/secrets/db_user
-MYSQL_PASSWORD_FILE: /run/secrets/db_user_password
+MYSQL_PASSWORD_FILE=/run/secrets/db_user_password
