--- a/mysql-server.env
+++ b/mysql-server.env
@@ -3,6 +3,6 @@
 MYSQL_ROOT_HOST=%
 
 # Use secrets for the following environment variables
-MYSQL_USER_FILE=/run/secrets/db_user
-MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
-MYSQL_PASSWORD_FILE: /run/secrets/db_user_password
+# MYSQL_USER_FILE=/run/secrets/db_user
+MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db_root_password
+# MYSQL_PASSWORD_FILE=/run/secrets/db_user_password
